sql/mysqld.cc
@@ -5312,6 +5312,7 @@ static int init_server_components()
   if (ha_recover(0))
     unireg_abort(1);
 
+  start_handle_manager();
   if (opt_bin_log)
   {
     int error;
@@ -5762,8 +5763,6 @@ int mysqld_main(int argc, char **argv)
       exit(0);
     }
   }
-
-  start_handle_manager();
 
   /* Copy default global rpl_filter to global_rpl_filter */
   copy_filter_setting(global_rpl_filter, get_or_create_rpl_filter("", 0));
